# vis_rand

./: .gitignore  CHANGELOG.md  LICENSE  Make.py  Makefile  README.md  deps.txt
.github/workflows/: build_to_release.yml  tauri_publish  tauri_test_on_pr.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/style/: smui-dark.css  smui.css
frontend/src/: App.svelte
frontend/src/lib/: DataCard.svelte  DiceCard.svelte  common.ts
frontend/src/lib/configure/: ActionArea.svelte  EditDialog.svelte  Editor.svelte
frontend/src/lib/dice/: Die.d.ts  DiePanel.svelte  Simple.svelte  Weighted.svelte
frontend/src/lib/visualize/: PieChart.svelte  Tabular.svelte  Visualization.svelte  common.ts
frontend/src/theme/: _smui-theme.scss
frontend/src/theme/dark/: _smui-theme.scss
lib/: Cargo.toml
lib/examples/: command.rs
lib/src/: lib.rs
