[package]
name = "random_visualizer"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Paul Bühne <buehne.paul@google.com>"]
repository = "github.com/Cactus-man/rand_visualizer"
default-run = "random_visualizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "isolation"] }
dice = { path = "../lib"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
